# json2relcsv

./: .gitignore  CMakeLists.txt  README.md  generate_large_json.py
.github/workflows/: ci.yml
include/: ast.h  ast.hpp  driver.hpp
src/: ast.c  csv_gen.c  csv_writer.cpp  main.c  parser.y  scanner.l
tests/: golden_test.sh  sample.json
tests/expected/: address.csv  hobbies.csv  orders.csv  schema.json  users.csv
web/: .gitignore  build-wasm.sh  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: csv.ts  main.ts  runner.ts  samples.ts  schema.ts
web/src/styles/: main.css
web/src/ui/: ast-view.ts  download.ts  editor.ts  error-panel.ts  schema-view.ts  tables-view.ts  tabs.ts
web/src/wasm/: json2relcsv.d.mts  json2relcsv.mjs
web/test/: csv.test.ts  runner.test.ts  smoke.mjs  tsconfig.json
